tests/NormalTests/paczka1/fuzzy1/14269686.err
Error in line 4: k2iJFgFqn S368 63,2
Error in line 6: k2iJFgFqn S930 2,7
Error in line 1: dWg6 S368 418,7
Error in line 22: A651 S930 -1,1
Error in line 26: k2iJFgFqn S930 $$,0
Error in line 24: dWg6 A651 306,6
Error in line 27: A651 S930 365,6
Error in line 33: dWg6 S368 42,6
Error in line 10: k2iJFgFqn A651 30,1
Error in line 39: k2iJFgFqn S930 46,1
